search implementado
