# swagger.json
@@ -285,6 +285,38 @@
       }
     }
   },
+  "/search": {
+    "get": {
+      "summary": "Busca um character pelo nome",
+      "description": "Rota responsável por buscar um character pelo Nome",
+      "tags": ["Characters"],
+      "requestBody": {
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/characters"
+            },
+            "examples": {
+              "User": {
+                "value": {
+                  "nome": "Glar"
+                }
+              }
+            }
+          }
+        }
+      },
+      "responses": {
+        "400": {
+          "description": "Not Found"
+        },
+        "200": {
+          "description": "OK"
+        }
+      }
+    }
+  },
+
   "components": {
     "schemas": {
       "User": {
@@ -307,14 +339,14 @@
           }
         }
       },
-      "auth":{
-        "type":"object",
-        "properties":{
-          "email":{
-            "type":"String"
+      "auth": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "String"
           },
-          "password":{
-            "type":"String"
+          "password": {
+            "type": "String"
           }
         }
       },
